[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/buttons/SoundEffectOn.png" type="Texture" id=1]
[ext_resource path="res://SoundEffectOnOff.gd" type="Script" id=2]
[ext_resource path="res://sprites/buttons/Music_ON.png" type="Texture" id=3]

[node name="Music&SoundOnOff" type="Node2D"]
position = Vector2( 850, 5 )
scale = Vector2( 0.07, 0.07 )
script = ExtResource( 2 )

[node name="SoundOnOff" type="TouchScreenButton" parent="."]
position = Vector2( 1500, 0 )
normal = ExtResource( 1 )

[node name="MusicOnOff" type="TouchScreenButton" parent="."]
position = Vector2( 300, 0 )
normal = ExtResource( 3 )
[connection signal="pressed" from="SoundOnOff" to="." method="_on_SoundOnOff_pressed"]
[connection signal="pressed" from="MusicOnOff" to="." method="_on_MusicOnOff_pressed"]
